--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,9 @@ body {
 
   font-family: 'Montserrat', sans-serif;
   font-size: 15px;
-  color: #333;
+  color: #FFFDFA;
   line-height: 1.6;
-  background-color: #FFF;
+  background-color: #001220;
 }
 
 *,
