--- a/css/style.css
+++ b/css/style.css
@@ -1,27 +1,101 @@
-body {
-  margin: 0;
+:root {
+	font-size: 16px;
+	--mainColor: #FFFDFA;
+	--transColor: rgba(255, 255, 255, .3);
 
-  font-family: 'Montserrat', sans-serif;
-  font-size: 15px;
-  color: #FFFDFA;
-  line-height: 1.6;
-  background-color: #001220;
+}
+
+body {
+	font-family: 'Rubik', sans-serif;
+	font-size: 15px;
+	color: #FFFDFA;
+	line-height: 1.6;
+	background-color: #001220;
 }
 
 *,
 *:before,
 *:after {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  margin: 0;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	margin: 0;
 }
 
-.header__inner {
-  height: 100px;
+a {
+	color: var(--mainColor);
+	text-decoration: none;
 }
 
-.header__logo {
-width: 100px;
+body {
+	
+	
+}
+.container {
+display: flex;
+justify-content: space-between;
+align-items: center;
+}
+
+.btn {
+	color: var(--mainColor);
+}
+
+header {
+	width: 100%;
+	position: absolute;
+	height: 100px;
+	/* background-color: var(--transColor); */
+	background: linear-gradient(269.69deg, rgba(255, 255, 255, 0.2) 0%, rgba(0, 0, 0, 0.076) 50.27%), linear-gradient(90.32deg, rgba(255, 253, 253, 0.1) 0.05%, rgba(0, 0, 0, 0.027) 44.53%), rgba(255, 255, 255, 0.15);
+/* bg nav */
+
+box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.4);
+backdrop-filter: blur(5px);
+}
+
+header .container {
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.nav-bar ul {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	min-width: 640px;
+	list-style-type: none;
+	
+
+}
+
+/* .nav-bar a {
+	text-decoration: none;
+} */
+
+.phone-num {
+font-size: 20px;
+font-weight: 700;
+text-decoration: none;
+}
+
+/* INTRO */
+
+.intro {
+	background-image: url(../src/img/hero.jpg);
+	background-position: 0 -74px;
+	background-size: cover;
+	background-repeat: no-repeat;
+}
+
+.intro-content {
+	height: 100vh;
+	max-width: 580px;
+	margin-top: 200px;
 }
