--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,8 @@ h2,
 h3,
 h4,
 h5,
-h6 {
+h6,
+ul {
 	margin: 0;
 }
 
@@ -33,33 +34,49 @@ a {
 	text-decoration: none;
 }
 
-body {
-	
-	
-}
+body {}
+
 .container {
-display: flex;
-justify-content: space-between;
-align-items: center;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 }
 
 .btn {
 	color: var(--mainColor);
+	padding: 10px 15px;
+	background: linear-gradient(160.31deg, rgba(5, 148, 255, 0.8) -8.16%, rgba(124, 162, 190, 0) 110.41%);
+	filter: drop-shadow(0px 6px 10px rgba(0, 0, 0, 0.4));
+	backdrop-filter: blur(5px);
+	border-radius: 6px;
+}
+
+h1 {
+	margin-bottom: 90px;
+	font-size: 46px;
+	font-weight: 700;
+	letter-spacing: 0.075em;
+}
+
+.title {
+	margin-bottom: 100px;
+	text-transform: uppercase;
 }
 
 header {
+	position: fixed;
+	z-index: 3;
 	width: 100%;
-	position: absolute;
+	/* position: absolute; */
 	height: 100px;
 	/* background-color: var(--transColor); */
 	background: linear-gradient(269.69deg, rgba(255, 255, 255, 0.2) 0%, rgba(0, 0, 0, 0.076) 50.27%), linear-gradient(90.32deg, rgba(255, 253, 253, 0.1) 0.05%, rgba(0, 0, 0, 0.027) 44.53%), rgba(255, 255, 255, 0.15);
-/* bg nav */
-
-box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.4);
-backdrop-filter: blur(5px);
+	box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.4);
+	backdrop-filter: blur(8px);
 }
 
 header .container {
+	height: 100px;
 	flex-direction: row;
 	justify-content: space-between;
 	align-items: center;
@@ -71,18 +88,17 @@ header .container {
 	align-items: center;
 	min-width: 640px;
 	list-style-type: none;
-	
-
 }
 
-/* .nav-bar a {
-	text-decoration: none;
-} */
+.logo-dez img {
+	/* vertical-align: super; */
+	margin-bottom: 18px;
+}
 
 .phone-num {
-font-size: 20px;
-font-weight: 700;
-text-decoration: none;
+	font-size: 20px;
+	font-weight: 700;
+	text-decoration: none;
 }
 
 /* INTRO */
@@ -94,8 +110,60 @@ text-decoration: none;
 	background-repeat: no-repeat;
 }
 
+.services {
+	background-image: url(../src/img/banner_serv.jpg);
+}
+
 .intro-content {
 	height: 100vh;
 	max-width: 580px;
 	margin-top: 200px;
+}
+
+.intro-content p {
+	max-width: 465px;
+	margin: 45px 0;
+	text-align: justify;
+	font-size: 18px;
+	font-weight: 600;
+	letter-spacing: 0.055em
+}
+
+.intro-content img:last-of-type {
+	padding-bottom: 30px;
+}
+
+
+
+
+
+
+
+
+/* FOOTER */
+.footer {
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
+	height: 200px;
+	width: 100%;
+	background: radial-gradient(50% 18432% at 50% 50%, rgba(0, 0, 0, 0.2) 0%, rgba(0, 0, 0, 0) 100%), radial-gradient(50% 18432% at 50% 50%, rgba(255, 255, 255, 0.2) 0%, rgba(255, 255, 255, 0) 100%); filter: drop-shadow(0px 6px 10px rgba(0, 0, 0, 0.4));
+	backdrop-filter: blur(5px);
+}
+
+.footer ul {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+	align-items: ;
+	list-style-type: none;
+}
+
+.footer-next {
+	height: 60px;
+	margin-top: 80px;
+
+	background: radial-gradient(50% 18432% at 50% 50%, rgba(0, 0, 0, 0.4) 0%, rgba(0, 0, 0, 0) 100%), radial-gradient(50% 18432% at 50% 50%, rgba(255, 255, 255, 0.2) 0%, rgba(255, 255, 255, 0) 100%);
+	filter: drop-shadow(0px 6px 10px rgba(0, 0, 0, 0.4));
+	backdrop-filter: blur(5px);
 }
