--- a/css/style.css
+++ b/css/style.css
@@ -7,9 +7,12 @@
 
 body {
 	font-family: 'Rubik', sans-serif;
-	font-size: 15px;
-	color: #FFFDFA;
-	line-height: 1.6;
+	font-size: 16px;
+	color: var(--mainColor);
+	font-weight: 400;
+	line-height: 19px;
+
+	/* line-height: 1.6; */
 	background-color: #001220;
 }
 
@@ -25,8 +28,13 @@ h3,
 h4,
 h5,
 h6,
-ul {
+ul,
+p {
 	margin: 0;
+}
+
+ul {
+	padding: 0;
 }
 
 a {
@@ -34,7 +42,7 @@ a {
 	text-decoration: none;
 }
 
-body {}
+/* body {} */
 
 .container {
 	display: flex;
@@ -56,6 +64,24 @@ h1 {
 	font-size: 46px;
 	font-weight: 700;
 	letter-spacing: 0.075em;
+}
+
+h2,
+h3 {
+	padding-top: 50px;
+	text-align: center;
+}
+
+h2 {
+	font-weight: 700;
+	font-size: 24px;
+}
+
+h3 {
+	
+	font-weight: 600;
+	font-size: 18px;
+	text-transform: uppercase;
 }
 
 .title {
@@ -111,7 +137,7 @@ header .container {
 }
 
 .services {
-	background-image: url(../src/img/banner_serv.jpg);
+	background-image: url(../src/img/serv.jpg);
 }
 
 .intro-content {
@@ -122,10 +148,10 @@ header .container {
 
 .intro-content p {
 	max-width: 465px;
-	margin: 45px 0;
+	margin: 60px 0;
 	text-align: justify;
 	font-size: 18px;
-	font-weight: 600;
+	font-weight: 400;
 	letter-spacing: 0.055em
 }
 
@@ -134,20 +160,74 @@ header .container {
 }
 
 
+/* three-dez */
 
+.three-dez {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	margin-top: 160px;
 
+}
 
+.dez-content {
+	align-items: center;
+	justify-content: space-between;
+}
 
+.dez-content ul {
+	display: flex;
+	justify-content: space-between;
+	/* justify-items: center; */
+	list-style-type: none;
+}
+
+.dez-content li {
+	max-width: 416px;
+	height: 510px;
+	margin-right: 24px;
+	background: linear-gradient(269.69deg, rgba(255, 255, 255, 0.2) 0%, rgba(0, 0, 0, 0.076) 50.27%), linear-gradient(90.32deg, rgba(255, 253, 253, 0.1) 0.05%, rgba(0, 0, 0, 0.027) 44.53%), rgba(255, 255, 255, 0.15);
+/* bg nav */
+
+box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.4);
+backdrop-filter: blur(5px);
+/* Note: backdrop-filter has minimal browser support */
+
+border-radius: 5px;
+}
+
+.dez-content li:last-child {
+	margin-right: 0;
+}
+
+.dez-content img {
+	padding: 50px 143px;
+}
+
+.dez-content p {
+	padding: 0 38px;
+	text-align: justify;
+}
 
 
 /* FOOTER */
+
+footer {
+	background-image: url(../src/img/footer_1.jpg);
+	background-repeat: no-repeat;
+	background-size: cover;
+	margin-top: 160px;
+}
+
 .footer {
+	
 	flex-direction: row;
 	justify-content: space-between;
 	align-items: center;
 	height: 200px;
 	width: 100%;
-	background: radial-gradient(50% 18432% at 50% 50%, rgba(0, 0, 0, 0.2) 0%, rgba(0, 0, 0, 0) 100%), radial-gradient(50% 18432% at 50% 50%, rgba(255, 255, 255, 0.2) 0%, rgba(255, 255, 255, 0) 100%); filter: drop-shadow(0px 6px 10px rgba(0, 0, 0, 0.4));
+	background: radial-gradient(50% 18432% at 50% 50%, rgba(0, 0, 0, 0.2) 0%, rgba(0, 0, 0, 0) 100%), radial-gradient(50% 18432% at 50% 50%, rgba(255, 255, 255, 0.2) 0%, rgba(255, 255, 255, 0) 100%);
+	filter: drop-shadow(0px 6px 10px rgba(0, 0, 0, 0.4));
 	backdrop-filter: blur(5px);
 }
 
@@ -155,15 +235,18 @@ header .container {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-around;
-	align-items: ;
+	/* align-items: ; */
 	list-style-type: none;
 }
 
 .footer-next {
 	height: 60px;
 	margin-top: 80px;
+	font-size: 12px;
+	font-weight: 500;
 
 	background: radial-gradient(50% 18432% at 50% 50%, rgba(0, 0, 0, 0.4) 0%, rgba(0, 0, 0, 0) 100%), radial-gradient(50% 18432% at 50% 50%, rgba(255, 255, 255, 0.2) 0%, rgba(255, 255, 255, 0) 100%);
 	filter: drop-shadow(0px 6px 10px rgba(0, 0, 0, 0.4));
 	backdrop-filter: blur(5px);
 }
+
