--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 	font-size: 16px;
 	--mainColor: #FFFDFA;
 	--transColor: rgba(255, 255, 255, .3);
+	--mainRed: rgba(254, 77, 77);
 
 }
 
@@ -40,10 +41,54 @@ ul {
 a {
 	color: var(--mainColor);
 	text-decoration: none;
+	padding-top: 5px;
+	padding-bottom: 5px;
 }
 
+header a:hover,
+.footer-links a {
+	display: inline-block;
+	position: relative;
+	color: var(--mainColor);
+	padding-bottom: 5px;
+	padding-top: 5px;
+}
+
+
+nav ul,
+.footer-links ul {
+	display: table-cell; 
+  position: relative; 
+}
+
+nav a,
+.footer-links a {
+	display: inline-block;
+  position: relative;
+}
+
+nav a:after,
+.footer-links a:after {    
+  background: none repeat scroll 0 0 transparent;
+  bottom: 0;
+  content: "";
+  display: block;
+  height: 2px;
+  left: 50%;
+  position: absolute;
+  background: #fff;
+  transition: width 0.3s ease 0s, left 0.3s ease 0s;
+  width: 0;
+}
+nav a:hover:after,
+.footer-links a:hover:after { 
+  width: 100%; 
+  left: 0; 
+}
+
+
 section {
-	margin-bottom: 160px;
+	margin-bottom: 140px;
 }
 
 /* .container {
@@ -54,15 +99,36 @@ section {
 
 .btn {
 	color: var(--mainColor);
-	padding: 10px 15px;
+	padding: 10px 20px;
 	background: linear-gradient(160.31deg, rgba(5, 148, 255, 0.8) -8.16%, rgba(124, 162, 190, 0) 110.41%);
 	filter: drop-shadow(0px 6px 10px rgba(0, 0, 0, 0.4));
-	backdrop-filter: blur(5px);
-	border-radius: 6px;
+	backdrop-filter: blur(2px);
+	border-radius: 8px;
 }
 
-h1 {
-	margin-bottom: 90px;
+.btn:hover,
+.btn:focus {
+	color: var(--mainColor);
+	background: linear-gradient(192deg, rgba(0, 146, 255, 0.9) -1.51%, rgba(200, 225, 244, 0) 114.09%);
+}
+
+.btn:active {
+	background: linear-gradient(196.77deg, rgba(254, 77, 77, 0.9) 0.74%, rgba(206, 63, 63, 0) 119.62%);
+}
+
+.btn-check:focus,
+.btn:active,
+.btn:focus {
+	box-shadow: none;
+}
+
+.title {
+	margin-bottom: 100px;
+	text-transform: uppercase;
+}
+
+.intro h1 {
+	margin-bottom: 70px;
 	font-size: 46px;
 	font-weight: 700;
 	letter-spacing: 0.075em;
@@ -70,7 +136,7 @@ h1 {
 
 h2,
 h3 {
-	
+
 	text-align: center;
 }
 
@@ -80,23 +146,20 @@ h2 {
 }
 
 h3 {
-padding-top: 50px;
+	padding-top: 50px;
 	font-weight: 600;
 	font-size: 18px;
 	text-transform: uppercase;
 }
 
-.title {
-	margin-bottom: 100px;
-	text-transform: uppercase;
-}
-
 header {
 	position: fixed;
-	z-index: 3;
+	top: 0;
+	left: 0;
+	z-index: 100;
 	width: 100%;
 	/* position: absolute; */
-	height: 100px;
+	height: 90px;
 	/* background-color: var(--transColor); */
 	background: linear-gradient(269.69deg, rgba(255, 255, 255, 0.2) 0%, rgba(0, 0, 0, 0.076) 50.27%), linear-gradient(90.32deg, rgba(255, 253, 253, 0.1) 0.05%, rgba(0, 0, 0, 0.027) 44.53%), rgba(255, 255, 255, 0.15);
 	box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.4);
@@ -104,7 +167,8 @@ header {
 }
 
 header .container {
-	height: 100px;
+	display: flex;
+	height: 100%;
 	flex-direction: row;
 	justify-content: space-between;
 	align-items: center;
@@ -113,7 +177,8 @@ header .container {
 .nav-bar ul {
 	display: flex;
 	justify-content: space-between;
-	align-items: center;
+	flex-direction: row;
+	/* align-items: center; */
 	min-width: 640px;
 	list-style-type: none;
 }
@@ -129,11 +194,17 @@ header .container {
 	text-decoration: none;
 }
 
-/* INTRO */
+.phone-num:hover {
+	color: var(--mainRed);
+}
+
+/* INTRO
+================= */
 
 .intro {
+	height: 100vh;
 	background-image: url("../src/img/hero.jpg");
-	background-position: 0 -74px;
+	background-position: 0 18%;
 	background-size: cover;
 	background-repeat: no-repeat;
 	margin-bottom: 0;
@@ -144,10 +215,19 @@ header .container {
 }
 
 .intro-content {
-	/* height: 100vh; */
-	height: 1000px;
+
+	/* height: 1000px; */
 	max-width: 580px;
-	margin-top: 200px;
+	padding-top: 200px;
+
+
+}
+
+.order-btns {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	list-style-type: none;
 }
 
 .intro-content p {
@@ -156,6 +236,7 @@ header .container {
 	text-align: justify;
 	font-size: 18px;
 	font-weight: 400;
+	line-height: 22px;
 	letter-spacing: 0.055em
 }
 
@@ -164,12 +245,14 @@ header .container {
 }
 
 
-/* ICONS-BAR */
+/* ICONS-BAR
+================== */
 
 .icons-bar {
 	height: 60px;
-	background: linear-gradient(211.61deg, rgba(255, 255, 255, 0.2) -1.16%, rgba(0, 0, 0, 0.2) 79.34%), rgba(255, 255, 255, 0.15);
-	opacity: 0.5;
+	background: linear-gradient(211.61deg, rgba(255, 255, 255, 0.1) -1.16%, rgba(0, 0, 0, 0.2) 79.34%), rgba(255, 255, 255, 0.1);
+
+	/* opacity: 0.5; */
 	/* bg nav */
 	box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.4);
 	backdrop-filter: blur(5px);
@@ -180,23 +263,50 @@ header .container {
 .icons-bar-inner ul {
 	display: flex;
 	flex-direction: row;
+	padding-top: 15px;
 	justify-content: space-between;
 	list-style-type: none;
-	
+	font-size: 13px;
+	font-weight: 600;
+	line-height: 15px;
+	color: var(--mainColor);
 
-	
+}
+
+.icons-bar li {
+	padding-left: 45px;
+	max-width: 187px;
+	min-height: 60px;
+}
+
+.icons-bar ul :last-child {
+	padding-left: 70px;
+	max-width: 190px;
 }
 
 .icon-time {
-	min-height: 30px;
-	background-repeat: no-repeat;
 	background-image: url("../src/img/icon_time.svg");
 }
 
-/* three-dez */
+.icon-contract {
+	background-image: url("../src/img/icon_contracts.svg");
+}
+
+.icon-act {
+	background-image: url("../src/img/icon_act.svg");
+}
+
+.icon-fast {
+	background-image: url("../src/img/icon_fast.png");
+}
+
+
+
+/* three-dez 
+====================*/
 
 .three-dez .container {
-min-height: 622px;
+	min-height: 622px;
 }
 
 .three-dez {
@@ -204,29 +314,41 @@ min-height: 622px;
 	flex-direction: column;
 	align-items: center;
 	justify-content: space-between;
-	/* margin-top: 160px; */
 
 }
 
 .dez-content {
 	display: flex;
+	position: relative;
 	flex-direction: column;
 	align-items: center;
 	justify-content: space-between;
 }
 
-/* .dez-items {
-	display: flex;
-	flex-direction: row;
+.ellipse {
+	position: absolute;
+	top: 10%;
+
+	height: 560px;
+	width: 1320px;
+
+
+	background: #22A0FE;
+	mix-blend-mode: screen;
+	opacity: 0.2;
+	filter: blur(200px);
+
+}
+
+.dez-items {
 	justify-content: space-between;
 	justify-items: center;
 	list-style-type: none;
-} */
+}
 
 .dez-item {
-	/* max-width: 30%; */
-	height: 510px;
-	/* margin-right: 24px; */
+	max-width: 30%;
+	min-height: fit-content;
 	background: linear-gradient(269.69deg, rgba(255, 255, 255, 0.2) 0%, rgba(0, 0, 0, 0.076) 50.27%), linear-gradient(90.32deg, rgba(255, 253, 253, 0.1) 0.05%, rgba(0, 0, 0, 0.027) 44.53%), rgba(255, 255, 255, 0.15);
 	/* bg nav */
 
@@ -234,7 +356,7 @@ min-height: 622px;
 	backdrop-filter: blur(5px);
 	/* Note: backdrop-filter has minimal browser support */
 
-	border-radius: 5px;
+	border-radius: 10px;
 	/* transition: all 500ms; */
 }
 
@@ -248,51 +370,297 @@ min-height: 622px;
 
 
 .dez-item img {
-	padding: 50px 143px;
+	padding-top: 50px;
+	padding-bottom: 50px;
+	background-position: 50% 0;
+}
+
+.icon {
+	background-repeat: no-repeat;
+}
+
+.dez-icon {
+	height: 130px;
+	width: 130px;
+	margin-top: 50px;
+	margin-bottom: 50px;
+	margin-left: auto;
+	margin-right: auto;
+	/* background-position: 50% 20%; */
+}
+
+.icon-rat {
+	background-image: url("../src/img/icon_rat.svg");
+}
+
+.icon-virus {
+	background-image: url("../src/img/icon_virus.svg");
+}
+
+.icon-insect {
+	background-image: url("../src/img/icon_insect.svg");
 }
 
 .dez-item p {
 	padding: 0 38px;
 	text-align: justify;
+	padding-bottom: 30px;
 }
 
 
-/* FOOTER */
+/* SLIDER
+================== */
+.section .container-fluid {
+	width: 100vw;
+}
+
+.swiper {
+	width: 100%;
+	height: 100%;
+
+}
+
+.swiper-wrapper {
+	vertical-align: middle;
+}
+
+.swiper-horizontal>.swiper-pagination-bullets, .swiper-pagination-bullets.swiper-pagination-horizontal, .swiper-pagination-custom, .swiper-pagination-fraction {
+	display: flex;
+	flex-direction: row;
+width: 12%;
+left: 44%;
+justify-content: space-between;
+}
+
+.swiper-pagination-bullet {
+	width: 40px;
+	height: 6px;
+
+	margin-left: 15%;
+margin-right: 15%;
+	opacity: 1;
+	border-radius: 0;
+	background: linear-gradient(163.12deg, rgba(0, 146, 255, 0.9) -1.51%, rgba(200, 225, 244, 0) 114.09%);
+	/* arrow slide */
+	
+	filter: drop-shadow(0px 4px 5px rgba(0, 0, 0, 0.55));
+	backdrop-filter: blur(5px);
+}
+
+.swiper-pagination-bullet.swiper-pagination-bullet-active {
+	background: linear-gradient(196.77deg, rgba(254, 77, 77, 0.9) 0.74%, rgba(206, 63, 63, 0) 119.62%);
+/* arrow slide */
+
+filter: drop-shadow(0px 4px 5px rgba(0, 0, 0, 0.55));
+backdrop-filter: blur(5px);
+}
+
+.slider-item {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	width: fit-content;
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: 50px;
+	padding: 50px 50px 60px 50px;
+
+
+	background: linear-gradient(215.95deg, rgba(255, 255, 255, 0.2) 30.47%, rgba(255, 255, 255, 0) 98.26%);
+	/* bg nav */
+
+	filter: drop-shadow(0px 6px 10px rgba(0, 0, 0, 0.4));
+	backdrop-filter: blur(5px);
+	/* Note: backdrop-filter has minimal browser support */
+
+	border-radius: 18px;
+}
+
+
+.swiper-slide-prev .slider-cover, 
+.swiper-slide-next .slider-cover {
+	position: absolute;
+	top: 0;
+	left: 0;
+	background-size: 100% 100%;
+	width: 100%;
+	height: 100%;
+
+
+	background: linear-gradient(90deg, rgba(255, 255, 255, 0.2) 52.81%, rgba(255, 255, 255, 0) 101.94%);
+	opacity: 0.8;
+	filter: drop-shadow(0px 4.99192px 8.31987px rgba(0, 0, 0, 0.4));
+	backdrop-filter: blur(4.15994px);
+	/* Note: backdrop-filter has minimal browser support */
+	
+	border-radius: 14.9758px;
+}
+
+.slider-img {
+	max-height: 341px;
+	max-width: 510px;
+	margin-bottom: 50px;
+}
+
+.slider-news {
+	max-width: 400px;
+}
+
+.swiper-slide.swiper-slide-prev {
+	transform: scale(.9);
+	opacity: 60%;
+	left: 5%;
+}
+.swiper-slide.swiper-slide-next {
+	transform: scale(.9);
+	opacity: 60%;
+	left: -5%;
+	/* top: 5%; */
+}
+
+.swiper-button-prev {
+	left: 25%;
+}
+
+.swiper-button-next {
+	right: 25%;
+}
+
+.swiper-pagination {}
+
+
+
+/* PARTNERS
+===================== */
+.section-partners {
+	margin-bottom: 50px;
+}
+
+.partners {
+	display: flex;
+	flex-direction: row;
+	vertical-align: bottom;
+	
+	justify-content: space-between;
+}
+
+.logo-metro {
+	width: 120px;
+	height: 25px;
+}
+
+/* .vkusvill {
+	width: 120px;
+	height: 30px;
+} */
+
+.logo-vkusvill {
+	width: 120%;
+	height: 120%;
+}
+
+
+
+
+
+/* FOOTER
+===================== */
 
 footer {
-	background-image: url(../src/img/footer_1.jpg);
+	/* background-image: url(../src/img/footer_1.jpg);
 	background-repeat: no-repeat;
-	background-size: cover;
-	margin-top: 160px;
+	background-size: cover; */
+	/* margin-top: 160px; */
+
+	font-size: 13px;
 }
 
-.footer {
-
-	flex-direction: row;
-	justify-content: space-between;
-	align-items: center;
-	height: 200px;
-	width: 100%;
+.first-floor {
 	background: radial-gradient(50% 18432% at 50% 50%, rgba(0, 0, 0, 0.2) 0%, rgba(0, 0, 0, 0) 100%), radial-gradient(50% 18432% at 50% 50%, rgba(255, 255, 255, 0.2) 0%, rgba(255, 255, 255, 0) 100%);
 	filter: drop-shadow(0px 6px 10px rgba(0, 0, 0, 0.4));
 	backdrop-filter: blur(5px);
 }
 
-.footer ul {
-	display: flex;
-	flex-direction: column;
-	justify-content: space-around;
-	/* align-items: ; */
-	list-style-type: none;
-}
-
-.footer-next {
-	height: 60px;
-	margin-top: 80px;
-	font-size: 12px;
-	font-weight: 500;
-
+.second-floor {
 	background: radial-gradient(50% 18432% at 50% 50%, rgba(0, 0, 0, 0.4) 0%, rgba(0, 0, 0, 0) 100%), radial-gradient(50% 18432% at 50% 50%, rgba(255, 255, 255, 0.2) 0%, rgba(255, 255, 255, 0) 100%);
 	filter: drop-shadow(0px 6px 10px rgba(0, 0, 0, 0.4));
 	backdrop-filter: blur(5px);
+}
+
+.footer-menu {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
+	width: 100%;
+
+	padding-top: 30px;
+	padding-bottom: 15px;
+
+	margin-top: auto;
+	margin-bottom: auto;
+}
+
+.footer-menu ul {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+	/* align-items: center; */
+
+	list-style-type: none;
+}
+
+.footer-links li {
+	margin-bottom: 5px;
+	align-content: space-between;
+}
+
+.contacts :first-child :first-of-type {
+	margin-bottom: 45px;
+}
+
+.footer-btns :first-child :first-of-type {
+	margin-bottom: 40px;
+}
+
+.footer-menu p {
+	max-width: 150px;
+}
+
+.contacts b {
+	font-size: 13px;
+	font-weight: 600;
+
+}
+
+.order-btns.footer-btns {
+	flex-direction: column;
+	align-items: flex-end;
+}
+
+.copyright {
+	padding-top: 15px;
+	padding-bottom: 15px;
+
+	font-size: 12px;
+	font-weight: 500;
+
+
+}
+
+
+
+
+@media (max-width: 767px) {
+
+
+
+	.dez-items {
+		flex-direction: column;
+	}
+
+	.dez-item {
+		max-width: 100%;
+		margin-bottom: 20px;
+	}
 }
