--- a/css/style.css
+++ b/css/style.css
@@ -57,33 +57,34 @@ header a:hover,
 
 nav ul,
 .footer-links ul {
-	display: table-cell; 
-  position: relative; 
+	display: table-cell;
+	position: relative;
 }
 
 nav a,
 .footer-links a {
 	display: inline-block;
-  position: relative;
+	position: relative;
 }
 
 nav a:after,
-.footer-links a:after {    
-  background: none repeat scroll 0 0 transparent;
-  bottom: 0;
-  content: "";
-  display: block;
-  height: 2px;
-  left: 50%;
-  position: absolute;
-  background: #fff;
-  transition: width 0.3s ease 0s, left 0.3s ease 0s;
-  width: 0;
+.footer-links a:after {
+	background: none repeat scroll 0 0 transparent;
+	bottom: 0;
+	content: "";
+	display: block;
+	height: 2px;
+	left: 50%;
+	position: absolute;
+	background: #fff;
+	transition: width 0.3s ease 0s, left 0.3s ease 0s;
+	width: 0;
 }
+
 nav a:hover:after,
-.footer-links a:hover:after { 
-  width: 100%; 
-  left: 0; 
+.footer-links a:hover:after {
+	width: 100%;
+	left: 0;
 }
 
 
@@ -152,6 +153,10 @@ h3 {
 	text-transform: uppercase;
 }
 
+
+/* HEADER
+===================== */
+
 header {
 	position: fixed;
 	top: 0;
@@ -192,6 +197,7 @@ header .container {
 	font-size: 20px;
 	font-weight: 700;
 	text-decoration: none;
+	transition: all 300ms;
 }
 
 .phone-num:hover {
@@ -202,12 +208,13 @@ header .container {
 ================= */
 
 .intro {
-	height: 100vh;
+	/* height: 100vh; */
 	background-image: url("../src/img/hero.jpg");
 	background-position: 0 18%;
 	background-size: cover;
 	background-repeat: no-repeat;
 	margin-bottom: 0;
+	padding-bottom: 50px;
 }
 
 .services {
@@ -215,12 +222,8 @@ header .container {
 }
 
 .intro-content {
-
-	/* height: 1000px; */
 	max-width: 580px;
-	padding-top: 200px;
-
-
+	padding-top: 13%;
 }
 
 .order-btns {
@@ -232,7 +235,7 @@ header .container {
 
 .intro-content p {
 	max-width: 465px;
-	margin: 60px 0;
+	margin: 85px 0;
 	text-align: justify;
 	font-size: 18px;
 	font-weight: 400;
@@ -244,12 +247,16 @@ header .container {
 	padding-bottom: 30px;
 }
 
+.logo-intro {
+	width: 65%;
+}
+
 
 /* ICONS-BAR
 ================== */
 
 .icons-bar {
-	height: 60px;
+	/* height: 60px; */
 	background: linear-gradient(211.61deg, rgba(255, 255, 255, 0.1) -1.16%, rgba(0, 0, 0, 0.2) 79.34%), rgba(255, 255, 255, 0.1);
 
 	/* opacity: 0.5; */
@@ -264,6 +271,7 @@ header .container {
 	display: flex;
 	flex-direction: row;
 	padding-top: 15px;
+	padding-bottom: 15px;
 	justify-content: space-between;
 	list-style-type: none;
 	font-size: 13px;
@@ -276,12 +284,18 @@ header .container {
 .icons-bar li {
 	padding-left: 45px;
 	max-width: 187px;
-	min-height: 60px;
+	min-height: 33px;
+	align-content: center;
 }
 
-.icons-bar ul :last-child {
+.icons-bar ul li:last-child {
 	padding-left: 70px;
 	max-width: 190px;
+}
+
+.p-contract {
+	padding-top: 5%;
+	
 }
 
 .icon-time {
@@ -305,10 +319,6 @@ header .container {
 /* three-dez 
 ====================*/
 
-.three-dez .container {
-	min-height: 622px;
-}
-
 .three-dez {
 	display: flex;
 	flex-direction: column;
@@ -329,8 +339,8 @@ header .container {
 	position: absolute;
 	top: 10%;
 
-	height: 560px;
-	width: 1320px;
+	height: 100%;
+	width: 100%;
 
 
 	background: #22A0FE;
@@ -347,8 +357,10 @@ header .container {
 }
 
 .dez-item {
-	max-width: 30%;
+	max-width: 32%;
 	min-height: fit-content;
+/* margin-right: 20px; */
+
 	background: linear-gradient(269.69deg, rgba(255, 255, 255, 0.2) 0%, rgba(0, 0, 0, 0.076) 50.27%), linear-gradient(90.32deg, rgba(255, 253, 253, 0.1) 0.05%, rgba(0, 0, 0, 0.027) 44.53%), rgba(255, 255, 255, 0.15);
 	/* bg nav */
 
@@ -357,16 +369,14 @@ header .container {
 	/* Note: backdrop-filter has minimal browser support */
 
 	border-radius: 10px;
-	/* transition: all 500ms; */
+	transition: all 500ms;
 }
 
-/* .dez-content div:last-child {
-	margin-right: 0;
-} */
 
-/* .dez-item:hover {
+
+.dez-item:hover {
 	transform: scale(110%);
-} */
+}
 
 
 .dez-item img {
@@ -389,6 +399,7 @@ header .container {
 	/* background-position: 50% 20%; */
 }
 
+
 .icon-rat {
 	background-image: url("../src/img/icon_rat.svg");
 }
@@ -402,16 +413,16 @@ header .container {
 }
 
 .dez-item p {
-	padding: 0 38px;
+	padding: 0 20px;
 	text-align: justify;
-	padding-bottom: 30px;
+	padding-bottom: 40px;
 }
 
 
 /* SLIDER
 ================== */
 .section .container-fluid {
-	width: 100vw;
+	width: 100%;
 }
 
 .swiper {
@@ -424,12 +435,15 @@ header .container {
 	vertical-align: middle;
 }
 
-.swiper-horizontal>.swiper-pagination-bullets, .swiper-pagination-bullets.swiper-pagination-horizontal, .swiper-pagination-custom, .swiper-pagination-fraction {
+.swiper-horizontal>.swiper-pagination-bullets,
+.swiper-pagination-bullets.swiper-pagination-horizontal,
+.swiper-pagination-custom,
+.swiper-pagination-fraction {
 	display: flex;
 	flex-direction: row;
-width: 12%;
-left: 44%;
-justify-content: space-between;
+	width: 13%;
+	left: 43%;
+	justify-content: space-between;
 }
 
 .swiper-pagination-bullet {
@@ -437,33 +451,33 @@ justify-content: space-between;
 	height: 6px;
 
 	margin-left: 15%;
-margin-right: 15%;
+	margin-right: 15%;
 	opacity: 1;
-	border-radius: 0;
+	border-radius: 3px;
 	background: linear-gradient(163.12deg, rgba(0, 146, 255, 0.9) -1.51%, rgba(200, 225, 244, 0) 114.09%);
 	/* arrow slide */
-	
+
 	filter: drop-shadow(0px 4px 5px rgba(0, 0, 0, 0.55));
 	backdrop-filter: blur(5px);
 }
 
 .swiper-pagination-bullet.swiper-pagination-bullet-active {
 	background: linear-gradient(196.77deg, rgba(254, 77, 77, 0.9) 0.74%, rgba(206, 63, 63, 0) 119.62%);
-/* arrow slide */
+	/* arrow slide */
 
-filter: drop-shadow(0px 4px 5px rgba(0, 0, 0, 0.55));
-backdrop-filter: blur(5px);
+	filter: drop-shadow(0px 4px 5px rgba(0, 0, 0, 0.55));
+	backdrop-filter: blur(5px);
 }
 
 .slider-item {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	width: fit-content;
+	width: min-content;
 	margin-left: auto;
 	margin-right: auto;
 	margin-bottom: 50px;
-	padding: 50px 50px 60px 50px;
+	padding: 40px 50px;
 
 
 	background: linear-gradient(215.95deg, rgba(255, 255, 255, 0.2) 30.47%, rgba(255, 255, 255, 0) 98.26%);
@@ -477,7 +491,7 @@ backdrop-filter: blur(5px);
 }
 
 
-.swiper-slide-prev .slider-cover, 
+.swiper-slide-prev .slider-cover,
 .swiper-slide-next .slider-cover {
 	position: absolute;
 	top: 0;
@@ -492,18 +506,26 @@ backdrop-filter: blur(5px);
 	filter: drop-shadow(0px 4.99192px 8.31987px rgba(0, 0, 0, 0.4));
 	backdrop-filter: blur(4.15994px);
 	/* Note: backdrop-filter has minimal browser support */
-	
-	border-radius: 14.9758px;
+
+	border-radius: 15px;
 }
 
 .slider-img {
-	max-height: 341px;
+	max-height: 300px;
 	max-width: 510px;
-	margin-bottom: 50px;
+	margin-bottom: 35px;
+	overflow: hidden;
+	border-radius: 16px;
+}
+
+.slider-img img {
+		/* border-radius: 17px; */
 }
 
 .slider-news {
-	max-width: 400px;
+	/* padding-left: 50px; */
+	/* max-width: 400px; */
+	width: 96%;
 }
 
 .swiper-slide.swiper-slide-prev {
@@ -511,6 +533,7 @@ backdrop-filter: blur(5px);
 	opacity: 60%;
 	left: 5%;
 }
+
 .swiper-slide.swiper-slide-next {
 	transform: scale(.9);
 	opacity: 60%;
@@ -518,45 +541,63 @@ backdrop-filter: blur(5px);
 	/* top: 5%; */
 }
 
+.swiper-button-prev:after,
+.swiper-button-next:after,
+.swiper-rtl .swiper-button-next:after {
+	content: none;
+}
+
 .swiper-button-prev {
+	top: 45%;
 	left: 25%;
+	background-image: url('../src/arrow-prev-icon.png');
+	width: 80px;
+	height: 80px;
 }
 
 .swiper-button-next {
+	top: 45%;
 	right: 25%;
+	background-image: url('../src/arrow-next-icon.png');
+	width: 80px;
+	height: 80px;
 }
-
-.swiper-pagination {}
 
 
 
 /* PARTNERS
 ===================== */
 .section-partners {
-	margin-bottom: 50px;
+	margin-bottom: 80px;
 }
 
 .partners {
-	display: flex;
-	flex-direction: row;
-	vertical-align: bottom;
-	
-	justify-content: space-between;
+	display: grid;
+	grid-template-columns: 2fr 2fr 1fr 2fr 2fr 1fr;
+	justify-items: center;	
+	grid-gap: 1em;
+}
+
+.partner-logo {
+margin-top: auto;
+margin-bottom: auto;
+}
+
+.logo-akfo {
+	width: 90%;
 }
 
 .logo-metro {
-	width: 120px;
-	height: 25px;
+	width: 130px;
+	height: 40px;
 }
 
-/* .vkusvill {
-	width: 120px;
-	height: 30px;
-} */
-
 .logo-vkusvill {
-	width: 120%;
-	height: 120%;
+	width: 130%;
+}
+
+.logo-nod {
+	width: 60px;
 }
 
 
@@ -644,16 +685,286 @@ footer {
 
 	font-size: 12px;
 	font-weight: 500;
+}
+
+
+
+@media (max-width: 1399px) {
+
+	body {
+		font-size: 14px;
+		line-height: 120%;
+	}
+
+	h2 {
+		font-size: 20px;
+	}
+
+	.btn {
+		padding: 8px 15px;
+		font-size: 14px;
+	}
+	
+
+	header {
+		height: fit-content;
+	}
+
+	.logo-dez {
+				width: 20%;
+	
+	}
+
+
+	.logo-dez img {
+		width: 100%;
+		margin-bottom: 5%;
+	}
+
+	.nav-bar ul {
+		min-width: 80%;
+		font-size: 12px;
+	}
+	
+	.phone-num {
+		font-size: 14px;
+	}
+
+	/* INTRO
+================= */
+
+.intro {
+	background-position: 40% 3%;
+	background-size: 105%;
+	padding-top: 3%;
+	padding-bottom: 0;
+}
+
+.intro h1 {
+	margin-bottom: 10%;
+	font-size: 33px;
+	letter-spacing: 0.08em;
+}
+
+.order-btns {
+	flex-direction: column;
+}
+
+.order-btns .btn {
+	margin-bottom: 3%;
+}
+
+.intro-content p {
+	margin: 8% 0;
+	text-align: justify;
+	font-size: 14px;
+	font-weight: 400;
+	line-height: 120%;
+	letter-spacing: 0.055em;
+}
+
+.logo-intro {
+	display: none;
+}
+
+/* three-dez 
+====================*/
+
+.dez-items {
+	width: 100%;
+}
+
+
+/* SLIDER
+================== */
+
+.swiper-button-next,
+.swiper-button-prev {
+	display: none;
+}
+
+.swiper-slide.swiper-slide-prev {
+	transform: scale(.9);
+	left: 0%;
+}
+
+.swiper-slide.swiper-slide-next {
+	transform: scale(.9);
+	left: 0%;
+}
+
+
+/* PARTNERS
+===================== */
+
+.partners {
+	grid-template-columns: 2fr 2fr 1fr;
+	gap: 2em;
+
+}
+
+.partner-logo {
+	margin-bottom: 0;
+	}
+
+}
+
+
+@media (max-width: 990px) {
+
+	h2 {
+		font-size: 16px;
+	}
+
+	h3 {
+		padding-top: 5%;
+	}
+
+
+	/* ICONS-BAR
+================== */
+
+	.icons-bar-inner ul {
+		display: grid;
+		grid-template-columns: repeat(4, 1fr);
+		gap: 1em;
+		font-size: 11px;
+		font-weight: 500;
+	}
+
+	.p-contract {
+		padding-top: 0;
+	}
+
+
+.dez-item {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	max-width: 90%;
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: 20px;
+	padding-bottom: 1%;
+}
+
+.dez-item h3 {
+	width: 100%;
+}
+
+.dez-icon {
+	height: 100px;
+	width: 100px;
+	margin-left: 4%;
+	margin-right: 5%;
+	background-size: 100%;
+	margin-top: 5%;
+	margin-bottom: 5%;
+}
+
+.dez-item p {
+	display: inline-block;
+	margin-top: auto;
+	margin-bottom: auto;
+	width: 70%;
+	padding: 0;
+}
+
+
+/* SLIDER
+================== */
+
 
 
 }
 
 
-
-
 @media (max-width: 767px) {
 
+	section {
+		margin-bottom: 50px;
+	}
 
+/* HEADER
+===================== */
+
+.title {
+	margin-bottom: 50px;
+}
+
+header {
+	height: fit-content;
+}
+
+	.nav-bar {
+		display: none;
+		position: absolute;
+		top: 0;
+		right: 0;
+		margin-top: 0;
+		padding-top: 50px;
+		padding-bottom: 30px;
+
+		width: 360px;
+		height: fit-content;
+	
+		border-radius: 3%;
+		background: linear-gradient(50deg, rgba(9, 56, 93, 0.8) 30%, rgba(1, 14, 25, 0.7) 70%);
+		box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.4);
+		backdrop-filter: blur(8px);
+	}
+
+	.nav-bar ul {
+		flex-direction: column;
+		align-items: center;
+		width: 360px;
+
+		min-width: auto;
+
+	}
+
+	.nav-bar li {
+		margin-bottom: 10px;
+	}
+
+.phone-num {
+	display: none;
+}
+
+
+/* INTRO
+================= */
+
+.intro {
+	background-position: 40% -2%;
+	background-size: 105%;
+	padding-top: 3%;
+	padding-bottom: 0;
+}
+
+.intro h1 {
+	margin-bottom: 15%;
+	font-size: 24px;
+	letter-spacing: 0.08em;
+}
+
+
+/* ICONS-BAR
+================== */
+
+.icons-bar-inner ul {
+	grid-template-columns: repeat(2, 1fr);
+	gap: 3em;
+	font-size: 10px;
+}
+
+.icons-bar-inner p {
+align-items: center;
+}
+
+
+/* three-dez 
+====================*/
 
 	.dez-items {
 		flex-direction: column;
@@ -663,4 +974,42 @@ footer {
 		max-width: 100%;
 		margin-bottom: 20px;
 	}
+
+/* PARTNERS
+===================== */
+
+.section-partners {
+	margin-bottom: 30px;
+}
+
+	.partners {
+		grid-template-columns: 1fr 1fr;
+	gap: 3em 1em;
+	}
+
+.partner-logo {
+	margin-bottom: auto;
+	}
+
+	.logo-akfo {
+		width: 115px;
+	}
+
+	.logo-metro {
+		width: 130px;
+		height: 30px;
+	}
+
+	.logo-5ka {
+		width: 55px;
+	}
+
+	.logo-vkusvill {
+		width: 135px;
+	}
+
+	.logo-nod {
+		width: 55px;
+	}
+
 }
