--- a/css/style.css
+++ b/css/style.css
@@ -87,16 +87,61 @@ nav a:hover:after,
 	left: 0;
 }
 
+/* .menu-btn a:hover:after,
+.menu-btn a:after {
+	display: none;
+	width: 0;
+} */
+
 
 section {
 	margin-bottom: 140px;
 }
 
-/* .container {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-} */
+.menu-btn {
+	display: none;
+	width: 35px;
+	height: 35px;
+	border-radius: 50%;
+	position: relative;
+}
+
+.menu-btn span::before,
+.menu-btn span::after,
+.menu-btn span {
+	position: absolute;
+	top: 50%; margin-top: -1px;
+	left: 50%; margin-left: -10px;
+	width: 20px;
+	height: 2px;
+	background-color: rgb(255, 255, 255);
+}
+
+.menu-btn span::before,
+.menu-btn span::after {
+	content: "";
+	transition: 0.3s;
+}
+
+.menu-btn span::before {
+	transform: translateY(-5px);
+}
+
+.menu-btn span::after {
+	transform: translateY(5px);
+}
+
+.menu-btn_active span {
+	height: 0;
+}
+
+.menu-btn_active span::before {
+	transform: rotate(45deg);
+}
+
+.menu-btn_active span::after {
+	transform: rotate(-45deg);
+}
 
 .btn {
 	color: var(--mainColor);
@@ -163,7 +208,6 @@ header {
 	left: 0;
 	z-index: 100;
 	width: 100%;
-	/* position: absolute; */
 	height: 90px;
 	/* background-color: var(--transColor); */
 	background: linear-gradient(269.69deg, rgba(255, 255, 255, 0.2) 0%, rgba(0, 0, 0, 0.076) 50.27%), linear-gradient(90.32deg, rgba(255, 253, 253, 0.1) 0.05%, rgba(0, 0, 0, 0.027) 44.53%), rgba(255, 255, 255, 0.15);
@@ -177,6 +221,10 @@ header .container {
 	flex-direction: row;
 	justify-content: space-between;
 	align-items: center;
+}
+
+.nav-bar {
+
 }
 
 .nav-bar ul {
@@ -358,22 +406,17 @@ header .container {
 /* margin-right: 20px; */
 
 	background: linear-gradient(269.69deg, rgba(255, 255, 255, 0.2) 0%, rgba(0, 0, 0, 0.076) 50.27%), linear-gradient(90.32deg, rgba(255, 253, 253, 0.1) 0.05%, rgba(0, 0, 0, 0.027) 44.53%), rgba(255, 255, 255, 0.15);
-	/* bg nav */
 
 	box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.4);
 	backdrop-filter: blur(5px);
-	/* Note: backdrop-filter has minimal browser support */
 
 	border-radius: 10px;
 	transition: all 500ms;
 }
 
-
-
-.dez-item:hover {
+/* .dez-item:hover {
 	transform: scale(110%);
-}
-
+} */
 
 .dez-item img {
 	padding-top: 50px;
@@ -910,35 +953,48 @@ footer {
 /* HEADER
 ===================== */
 header .container {
-	justify-content: start;
+	justify-content: space-between;
 }
 
 header {
 	height: fit-content;
 }
 
-	.nav-bar {
-		display: none;
-		position: absolute;
+
+
+.nav-bar {
+		position: fixed;
 		top: 0;
 		right: 0;
+		z-index: 101;
 		margin-top: 0;
 		padding-top: 50px;
 		padding-bottom: 30px;
 
-		width: 360px;
-		height: fit-content;
+		width: 250px;
 	
-		border-radius: 3%;
+		border-radius: 5px;
 		background: linear-gradient(50deg, rgba(9, 56, 93, 0.8) 30%, rgba(1, 14, 25, 0.7) 70%);
 		box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.4);
-		backdrop-filter: blur(8px);
+		backdrop-filter: blur(5px);		
+		
+		transition: all ease-out 0.5s;
+		transform-origin: top center;
+		transform: scaleY(0) translateY(-20%);
+		opacity: 0;
+	}
+
+	.nav-bar.nav-bar_active {
+		display: block;
+		transform: scaleY(1) translateY(0);
+		opacity: 1;
+		
 	}
 
 	.nav-bar ul {
 		flex-direction: column;
 		align-items: center;
-		width: 360px;
+		/* width: 360px; */
 
 		min-width: auto;
 	}
@@ -948,9 +1004,12 @@ header {
 	}
 
 .phone-num {
-	position: absolute;
-	margin-left: 29%;
 	font-size: 13px;
+}
+
+.menu-btn {
+	display: block;
+	z-index: 103;
 }
 
 
