исправлен адрес к лого на главной

--- a/css/style.css
+++ b/css/style.css
@@ -87,6 +87,13 @@ nav a:hover:after,
 	left: 0;
 }
 
+
+/* .logo_akfo {
+	background-image: url('../src/logo_akfo.svg');
+} */
+
+
+
 /* .menu-btn a:hover:after,
 .menu-btn a:after {
 	display: none;
