--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body {
 	font-size: 16px;
 	color: var(--mainColor);
 	font-weight: 400;
-	line-height: 19px;
+	line-height: 140%;
 
 	/* line-height: 1.6; */
 	background-color: #001220;
@@ -848,6 +848,7 @@ footer {
 	display: grid;
 	padding-left: 45px;
 	align-content: center;
+	
 }
 
 .icons-serv li:last-child {
@@ -876,6 +877,14 @@ footer {
 	margin-bottom: 5%;
 }
 
+.services-list li {
+	margin-bottom: 1.5%;
+}
+
+.services-list li:last-child {
+	margin-bottom: 0;
+}
+
 /* .services-content {
 	display: grid;
 	align-items: center;
@@ -883,24 +892,24 @@ footer {
 
 .serv-img {
 	background-repeat: no-repeat;
+	background-size: cover;
 	/* width: 617px; */
 	height: 412px;
-
+align-items: center;
 	border-radius: 5px;
 }
 
 .serv-img-1 {
-	background-size: contain;
 	background-image: url('../src/img/serv_1.jpg');
 }
 
 .serv-img-2 {
-	background-size: contain;
+	/* background-size: contain; */
 	background-image: url('../src/img/serv_2.jpg');
 }
 
 .serv-img-3 {
-	background-size: contain;
+	/* background-size: contain; */
 	background-image: url('../src/img/serv_3.jpg');
 }
 
@@ -1118,7 +1127,7 @@ footer {
 
 	body {
 		font-size: 14px;
-		line-height: 120%;
+		/* line-height: 120%; */
 	}
 
 	section {
@@ -1245,6 +1254,19 @@ footer {
 	}
 
 
+		/* NEW PAGE 03 ! SERVICES
+===========================
+===========================  */
+
+.serv-img-1 {
+	background-position: 25% 0;
+}
+
+.serv-img-3 {
+	background-position: 60% 0;
+}
+
+
 	/* NEW PAGE 05! WORK
 ===========================
 ===========================  */
@@ -1257,6 +1279,7 @@ footer {
 
 
 @media (max-width: 989px) {
+
 
 	h2 {
 		font-size: 16px;
@@ -1390,6 +1413,10 @@ footer {
 	/* INTRO SERV
 ========================== */
 
+.intro-services h1 {
+	font-size: 2rem;
+}
+
 	.intro-services {
 		margin-bottom: 100px;
 		background-image: url("../src/img/serv.jpg");
@@ -1417,7 +1444,6 @@ footer {
 
 	.serv-img {
 		background-position: 45% 0;
-		background-size: cover;
 	}
 
 	.serv-img-2 {
@@ -1540,10 +1566,11 @@ footer {
 		padding-bottom: 5%;
 	}
 
+	.intro-services h1,
 	h1 {
 		margin-bottom: 17%;
 		font-size: 18px;
-		letter-spacing: 0.08em;
+		/* letter-spacing: 0.08em; */
 	}
 
 	.intro-content p {
