--- a/css/style.css
+++ b/css/style.css
@@ -950,17 +950,17 @@ footer {
 }
 
 .sert-1 {
-	background-image: url('../img/full_sert_1\ 55.99.25.000.М.000389.09\ 1.jpg');
+	background-image: url('../img/sert_1.jpg');
 }
 
 
 .sert-2 {
-	background-image: url('../img/full_sert_2\ 77.01.16.000.М.424.01\ 1.jpg');
+	background-image: url('../img/sert_2.jpg');
 }
 
 
 .sert-3 {
-	background-image: url('../img/full_sert_3\ 77.01.16.000.М.004318.06\ 1.jpg');
+	background-image: url('../img/sert_3.jpg');
 }
 
 /* NEW PAGE 05! WORK
